# vocalcoachbench

./: .gitignore  CITATION.cff  DATA_LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: anonymity.md  data_format.md  huggingface_dataset.md  postprocessing.md  prompts.md  reproducing_paper_results.md  submission.md
examples/: direct_pairwise_predictions.jsonl  example_raw_segment_outputs.jsonl  raw_direct_pairwise_outputs.jsonl  raw_top3_score_outputs.jsonl  score_predictions.jsonl  segment_predictions.jsonl  segment_references.jsonl  top3_predictions.jsonl  top3_references.jsonl  triplet_pairs.jsonl
prompts/: claim_objective_claims_v5.txt  direct_pairwise_triplet_v5.txt  objective_top3_score_v5.txt  simple_overall_v5.txt  simple_score_v5.txt  simple_segment_v5.txt  simple_top3_v5.txt  structured_segment_v5.txt
scripts/: evaluate_all.py  infer_direct_pairwise_template.py  infer_single_audio_template.py  postprocess_predictions.py  prepare_hf_release.py  run_examples.sh
vocalcoachbench/: __init__.py  cli.py  io.py  metrics.py  postprocess.py  taxonomy.py
